--- a/Day01-15/01.初识Python.md
+++ b/Day01-15/01.初识Python.md
@@ -4,7 +4,7 @@
 
 ### Python简介
 
-#### Python的历史
+#### Python历史
 
 1. 1989年圣诞节：Guido von Rossum开始写Python语言的编译器。
 2. 1991年2月：第一个Python编译器（同时也是解释器）诞生，它是用C语言实现的（后面），可以调用C语言的库函数。在最早的版本中，Python已经提供了对“类”，“函数”，“异常处理”等构造块的支持，还有对列表、字典等核心数据类型，同时支持以模块为基础来构造应用程序。
